--- a/sudoku.vcxproj
+++ b/sudoku.vcxproj
@@ -213,6 +213,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="res\sudoku.rc2" />
+    <None Include="settings.dat" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\sudoku.ico" />
