--- a/sudoku.vcxproj.filters
+++ b/sudoku.vcxproj.filters
@@ -78,6 +78,7 @@
     <None Include="res\sudoku.rc2">
       <Filter>리소스 파일</Filter>
     </None>
+    <None Include="settings.dat" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\sudokuDoc.ico">
