--- a/sudoku.vcxproj.filters
+++ b/sudoku.vcxproj.filters
@@ -79,6 +79,7 @@
       <Filter>리소스 파일</Filter>
     </None>
     <None Include="settings.dat" />
+    <None Include="ranking.dat" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\sudokuDoc.ico">
