--- a/sudoku.vcxproj.filters
+++ b/sudoku.vcxproj.filters
@@ -91,5 +91,8 @@
     <Image Include="res\Toolbar.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="..\..\Downloads\sudoku.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
